added tech stack to each project

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <a href="https://github.com/thinkful-ei21/hearbuds-client" target="_blank">
                 <img class="logo" src="images/github.png">   
             </a>
+            <p>Tech Stack: HTML5, CSS, NodeJS, GraphQL, MongoDB, React, Redux, JWT, Firebase, Express, Mongoose, Passport, Zeit</p>
         </section>
 
         <section role="project 2">
@@ -65,6 +66,7 @@
             <a href="https://github.com/harleyjj/autoshopfinder-client" target="_blank">
                 <img class="logo" src="images/github.png">  
             </a>
+            <p>Tech Stack: HTML5, CSS, NodeJS, PostgreSQL, React, Redux, JWT, Heroku, Express, Mongoose, Passport</p>
         </section>
 
         <section role="project 3">
@@ -76,6 +78,7 @@
             <a href="https://github.com/harleyjj/coding-challenge" target="_blank">
                 <img class="logo" src="images/github.png">  
             </a>
+            <p>Tech Stack: HTML5, CSS, NodeJS, React, Redux, Heroku, Express</p>
         </section>
         
         <section role="project 4">
@@ -87,6 +90,7 @@
             <a href="https://github.com/thinkful-ei21/suman-harley-spaced-client" target="_blank">
                 <img class="logo" src="images/github.png">  
             </a>
+            <p>Tech Stack: HTML5, CSS, NodeJS, MongoDB, React, Redux, JWT, Heroku, Express, Mongoose, Passport</p>
         </section>
     </main>
     <footer role="content-info">Where you can reach me: harleyyesm@gmail.com</footer>
